<resources>
    <string name="app_name">Frosch</string>
    <string name="history">История</string>
    <string name="statistic_year">Год</string>
    <string name="statistic_month">Месяц</string>
    <string name="pig_bank">Копилка</string>
    <string name="user">Пользователь</string>
    <string name="name_post">Название</string>
    <string name="comment_post">Комментарий</string>
    <string name="sum_post">Сумма</string>
    <string name="date_post">Дата</string>
    <string name="income">Доход</string>
    <string name="consumption">Расход</string>
    <string name="add_post">Добавить запись</string>
    <string name="time">Время</string>
    <string name="undo_text">Вернуть запись?</string>
    <string name="undo">Вернуть</string>
    <string name="color_picker_dialog_title">Выберите цвет</string>
    <string name="icon">icon</string>
    <string name="choose_action">Выберите действие</string>
    <string name="update">Изменить</string>
    <string name="update_post">Изменить запись</string>
    <string name="settings">Настройки</string>

    <string-array name="entries">
        <item>Рубль ₽</item>
        <item>Доллар $</item>
        <item>Евро €</item>
    </string-array>

    <string-array name="entry_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>