<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/last_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/round_toolbar"
        android:src="@drawable/ic_last"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:text="@string/update_post"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/color"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label"
        android:background="@drawable/circle_button"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.624"
        app:layout_constraintStart_toEndOf="@+id/color"
        app:layout_constraintTop_toBottomOf="@+id/label"
        tools:src="@drawable/ic_dish_post"
        android:background="@drawable/round_button"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:hint="@string/name_post"
        app:layout_constraintTop_toBottomOf="@+id/color"
        tools:layout_editor_absoluteX="30dp"
        android:inputType="textCapSentences"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:hint="@string/comment_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:inputType="textCapSentences"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/sum"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:hint="@string/sum_post"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/date_post"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sum" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/time"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/success"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="21sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:text="@string/consumption"
        android:textColor="@color/consumption"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/income"
        android:textColor="@color/income"
        android:textSize="33sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/type"
        android:layout_width="54dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:paddingVertical="12dp"
        android:theme="@style/TypeSwitch"
        app:layout_constraintEnd_toStartOf="@id/textView2"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/time" />

</androidx.constraintlayout.widget.ConstraintLayout>